tests/core/error/query-error-1.rq
PREFIX  rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>

SELECT ?val
WHERE 
	?val a rdfs:Resource
}
